# AudioScrambler

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
audioscrambler/: Scrambler.py  __init__.py
audioscrambler/io/: __init__.py  io.py  resample.py
audioscrambler/report/: Capa.py  Conclusao.py  Intro.py  Metodos.py  Report.py  Sinal.py  Sumario.py  text_styles.py  utils.py
